--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-status-code": "^2.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoos": "^0.0.1-security",
     "mongoose": "^8.19.3",
     "morgan": "^1.10.1",
     "multer": "^2.0.2"
